<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      style="@style/LinearLayoutWithLargePadding"
      >
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          style="@style/LinearLayoutWithLargePadding"
          >
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_registration_login_hint"
            style="@style/EditTextSingleLineText"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_registration_email_hint"
            style="@style/EditTextSingleLineTextEmail"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_registration_password_hint"
            style="@style/EditTextSingleLinePassword"
            />

        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_registration_confirm_hint"
            style="@style/EditTextSingleLinePassword"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_extra_large"
            android:layout_marginLeft="@dimen/spacing_extra_large"
            android:text="@string/fragment_registration_sign_up_button_title"
            />
      </LinearLayout>
    </android.support.v7.widget.CardView>
  </LinearLayout>

</ScrollView>