<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScrollViewWithBottomPadding"
    >
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_large_double"
      >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/spacing_large"
        android:layout_height="wrap_content"
        >

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          style="@style/LinearLayoutWithNormalPadding"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_subscription_monthly_plan"
            style="@style/TextGreyHeaderBold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/fragment_subscription_monthly_plan_description"
            style="@style/TextSmall"
            />

        <Button
            android:id="@+id/btn_subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="@dimen/spacing_extra_large"
            android:layout_marginLeft="@dimen/spacing_extra_large"
            android:text="@string/fragment_subscription_subscribe_button_title"
            />

      </LinearLayout>

    </android.support.v7.widget.CardView>

  </LinearLayout>
</ScrollView>