<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_normal"
      >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/spacing_small"
        android:layout_marginRight="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:text="@string/view_base_chart_report_layout_expense_dots"
        style="@style/TextNormalMiniEnd"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/spacing_small"
        android:layout_marginRight="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:text="@string/view_base_chart_report_layout_balance_dots"
        style="@style/TextNormalMiniEnd"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/spacing_small"
        android:layout_marginRight="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:text="@string/view_base_chart_report_layout_income_dots"
        style="@style/TextNormalMiniEnd"
        />
  </LinearLayout>
  <org.eazegraph.lib.charts.VerticalBarChart
      android:id="@+id/v_bar_chart"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_large"
      android:layout_margin="@dimen/spacing_normal"
      app:egFixedBarWidth="true"
      app:egBarWidth="@dimen/width_normal"
      app:egLegendHeight="0dp"
      app:egShowValues="true"
      app:egEnableScroll="false"
      app:egShowDecimal="true"
      app:egValueUnit="%"
      app:egShowBarLabel="false"
      app:egLegendColor="@android:color/white"
      />
</LinearLayout>