<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_margin="@dimen/spacing_large"
          android:layout_height="wrap_content"
          >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/LinearLayoutWithNormalPadding"
            >

          <LinearLayout
              android:id="@+id/ll_dummy"
              android:orientation="horizontal"
              android:layout_width="0dp"
              android:layout_height="0dp"
              style="@style/LinearLayoutDummyFocusable"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/fragment_add_account_account_title"
              style="@style/TextGreyHeaderBold"
              />

          <EditText
              android:id="@+id/et_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/spacing_normal"
              android:hint="@string/fragment_add_account_enter_new_account_title"
              style="@style/EditTextSingleLineText"
              />
        </LinearLayout>

      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_marginLeft="@dimen/spacing_large"
          android:layout_marginRight="@dimen/spacing_large"
          android:layout_height="wrap_content"
          >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/LinearLayoutWithNormalPadding"
            >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/fragment_add_account_current_amount"
              style="@style/TextGreyHeaderBold"
              />

          <com.novachevskyi.expenseslite.presentation.view.component.MoneyEditTextView
              android:id="@+id/v_money"
              android:layout_width="@dimen/width_large"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/spacing_normal"
              android:layout_gravity="end"
              style="@style/EditTextSingleLineTextNumeric"
              />
        </LinearLayout>

      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_margin="@dimen/spacing_large"
          android:layout_height="wrap_content"
          >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/LinearLayoutWithNormalPadding"
            >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/fragment_add_account_payment_method"
              style="@style/TextGreyHeaderBold"
              />

          <com.novachevskyi.expenseslite.presentation.view.component.PaymentMethodSpinnerView
              android:id="@+id/v_method"
              android:layout_width="match_parent"
              android:layout_marginTop="@dimen/spacing_normal"
              android:layout_height="wrap_content"
              />
        </LinearLayout>

      </android.support.v7.widget.CardView>

    </LinearLayout>
  </ScrollView>

  <com.novachevskyi.expenseslite.presentation.view.component.AcceptView
      android:id="@+id/v_accept"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />
</LinearLayout>